{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 39,
  "lineage": "f991f3e8-23c4-2ef6-82c5-4555a8621042",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957446860331:security-group/sg-096e1e8174cb551f2",
            "description": "Created by RDS management console",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "db-sg"
                ]
              }
            ],
            "id": "sg-096e1e8174cb551f2",
            "name": "db-sg",
            "region": "us-east-1",
            "tags": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a307ebe94103d950"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957446860331:vpc/vpc-0a307ebe94103d950",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-01d96525085ec830d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-00f6953c215b6ff35",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "default-vpc"
                ]
              }
            ],
            "id": "vpc-0a307ebe94103d950",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04eec138dd857b5dd",
            "owner_id": "957446860331",
            "region": "us-east-1",
            "tags": {
              "Name": "default-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.rds_mysql_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:957446860331:security-group/sg-0e5b55d4a3464e19f",
            "description": "Control traffic to/from RDS Aurora rds-cdc-cluster",
            "egress": [],
            "id": "sg-0e5b55d4a3464e19f",
            "ingress": [],
            "name": "rds-cdc-cluster-20251030101616850200000003",
            "name_prefix": "rds-cdc-cluster-",
            "owner_id": "957446860331",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-cdc-cluster",
              "repo_url": "https://github.com/Gaurav2327/terraform-aws-msk-pipeline.git",
              "resource": "msk",
              "stack": "github-resources"
            },
            "tags_all": {
              "Name": "rds-cdc-cluster",
              "repo_url": "https://github.com/Gaurav2327/terraform-aws-msk-pipeline.git",
              "resource": "msk",
              "stack": "github-resources"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a307ebe94103d950"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}